unpackaged/main/default/objects/Courier_Data__c/fields/Collection_is_from_a_relay__c.field-meta.xml
<CustomField>
    <fullName>Collection_is_from_a_relay__c</fullName>
    <label>Collection is from a relay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>