unpackaged/main/default/objects/Courier_Data__c/fields/County_of_Refuel__c.field-meta.xml
<CustomField>
    <fullName>County_of_Refuel__c</fullName>
    <label>County of Refuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liberia_County</valueSetName>
    </valueSet>
</CustomField>