unpackaged/main/default/objects/Courier_Data__c/fields/Courier_Assign_County__c.field-meta.xml
<CustomField>
    <fullName>Courier_Assign_County__c</fullName>
    <label>Courier Assign County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liberia_County</valueSetName>
    </valueSet>
</CustomField>