unpackaged/main/default/objects/Courier_Data__c/fields/Courier_Name__c.field-meta.xml
<CustomField>
    <fullName>Courier_Name__c</fullName>
    <label>Courier Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Courier</valueSetName>
    </valueSet>
</CustomField>