unpackaged/main/default/objects/Courier_Data__c/fields/Courier_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Courier_Pickup_Date__c</fullName>
    <label>Courier Pickup Date</label>
    <type>Date</type>
</CustomField>