unpackaged/main/default/objects/Courier_Data__c/fields/Date_Sample_Collected_from_Patient__c.field-meta.xml
<CustomField>
    <fullName>Date_Sample_Collected_from_Patient__c</fullName>
    <formula>IDSR_ID__r.Date_Sample_Collected_from_Patient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Sample Collected from Patient</label>
    <type>Date</type>
</CustomField>