unpackaged/main/default/objects/Courier_Data__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <label>Delivery Time</label>
    <type>Time</type>
</CustomField>