unpackaged/main/default/objects/Courier_Data__c/fields/End_Kilometer__c.field-meta.xml
<CustomField>
    <fullName>End_Kilometer__c</fullName>
    <label>End Kilometer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>