unpackaged/main/default/objects/Courier_Data__c/fields/Fuel_Gallon__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Gallon__c</fullName>
    <label>Fuel (Gallon)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>