unpackaged/main/default/objects/Courier_Data__c/fields/IDSR_ID__c.field-meta.xml
<CustomField>
    <fullName>IDSR_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IDSR-ID</label>
    <referenceTo>Sample__c</referenceTo>
    <relationshipLabel>Courier Data</relationshipLabel>
    <relationshipName>Courier_Data</relationshipName>
    <type>Lookup</type>
</CustomField>