unpackaged/main/default/objects/Courier_Data__c/fields/KM_Reading__c.field-meta.xml
<CustomField>
    <fullName>KM_Reading__c</fullName>
    <label>KM Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>