unpackaged/main/default/objects/Courier_Data__c/fields/Motocycle_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Motocycle_Plate_Number__c</fullName>
    <label>Motocycle Plate Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Motocycles</valueSetName>
    </valueSet>
</CustomField>