unpackaged/main/default/objects/Courier_Data__c/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <formula>IDSR_ID__r.Patient_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient ID</label>
    <type>Text</type>
</CustomField>