unpackaged/main/default/objects/Courier_Data__c/fields/Pickup_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Temperature__c</fullName>
    <label>Pickup Temperature</label>
    <type>Phone</type>
</CustomField>