unpackaged/main/default/objects/Courier_Data__c/fields/Purpose_of_Trip__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Trip__c</fullName>
    <label>Purpose of Trip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>