unpackaged/main/default/objects/Courier_Data__c/fields/Sample_Collection_Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Sample_Collection_Site_Location__c</fullName>
    <formula>TEXT(IDSR_ID__r.Sample_Collection_Site_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Collection Site Location</label>
    <type>Text</type>
</CustomField>