unpackaged/main/default/objects/Courier_Data__c/fields/Sample_Drop_off_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Sample_Drop_off_Temperature__c</fullName>
    <label>Sample Drop off Temperature</label>
    <type>Phone</type>
</CustomField>