unpackaged/main/default/objects/Courier_Data__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <formula>TEXT(IDSR_ID__r.Sample_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Type</label>
    <type>Text</type>
</CustomField>