unpackaged/main/default/objects/Courier_Data__c/fields/Specimen_County_of_origin__c.field-meta.xml
<CustomField>
    <fullName>Specimen_County_of_origin__c</fullName>
    <formula>TEXT(IDSR_ID__r.Specimen_County_of_origin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specimen County of origin</label>
    <type>Text</type>
</CustomField>