unpackaged/main/default/objects/Courier_Data__c/fields/Start_Kilometer__c.field-meta.xml
<CustomField>
    <fullName>Start_Kilometer__c</fullName>
    <label>Start Kilometer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>