unpackaged/main/default/objects/Courier_Data__c/listViews/Active_Courier.listView-meta.xml
<ListView>
    <fullName>Active_Courier</fullName>
    <columns>NAME</columns>
    <columns>IDSR_ID__c</columns>
    <columns>Purpose_of_Trip__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Kilometer__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Courier</label>
</ListView>